--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="wrapper">
       
       <header>
-        <img src="www/network.png" alt="Corporate network">
+        <img src="www/network.jpg" alt="DALL-E digital trace data">
 
            
         <p>
